deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thinkpixelag
spec:
  selector:
    app.kubernetes.io/name: thinkpixelag
  ports:
    - name: http
      port: 8080
      targetPort: http
